# orcashell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns
crates/orcashell/: Cargo.toml  build.rs
crates/orcashell-cli/: Cargo.toml
crates/orcashell-cli/src/: client.rs  main.rs
crates/orcashell-cli/src/commands/: daemon.rs  mod.rs  open.rs
crates/orcashell-daemon-core/: Cargo.toml
crates/orcashell-daemon-core/src/: git_coordinator.rs  handler.rs  lib.rs  server.rs
crates/orcashell-daemon-core/src/git_coordinator/: tests.rs
crates/orcashell-daemon-core/tests/: cli_paths.rs  integration.rs  open_project_integration.rs
crates/orcashell-git/: Cargo.toml
crates/orcashell-git/src/: lib.rs  tests.rs
crates/orcashell-ipc/: Cargo.toml
crates/orcashell-ipc/src/: endpoint.rs  lib.rs  unix.rs  windows.rs
crates/orcashell-ipc/tests/: roundtrip.rs
crates/orcashell-platform/: Cargo.toml
crates/orcashell-platform/src/: lib.rs  tests.rs
crates/orcashell-protocol/: Cargo.toml
crates/orcashell-protocol/src/: framing.rs  ids.rs  lib.rs  messages.rs  version.rs
crates/orcashell-protocol/tests/: framing.rs  serde_roundtrip.rs
crates/orcashell-session/: Cargo.toml
crates/orcashell-session/shell-integration/: orcashell.bash  orcashell.ps1  orcashell.zsh
crates/orcashell-session/src/: cwd.rs  dimensions.rs  engine.rs  error.rs  event.rs  lib.rs  semantic_zone.rs  shell_integration.rs  tests.rs
crates/orcashell-session/src/semantic_zone/: tests.rs
crates/orcashell-session/src/shell_integration/: tests.rs
crates/orcashell-store/: Cargo.toml
crates/orcashell-store/src/: lib.rs  settings.rs  tests.rs
crates/orcashell-store/src/settings/: tests.rs
crates/orcashell-syntax/: Cargo.toml
crates/orcashell-syntax/src/: lib.rs  powershell.sublime-syntax  tests.rs  theme.rs
crates/orcashell-syntax/src/theme/: tests.rs
crates/orcashell-terminal-view/: Cargo.toml
crates/orcashell-terminal-view/src/: actions.rs  box_drawing.rs  colors.rs  input.rs  lib.rs  links.rs  mouse.rs  renderer.rs  search.rs  selection_delete.rs  terminal_view.rs
crates/orcashell-terminal-view/src/box_drawing/: tests.rs
crates/orcashell-terminal-view/src/colors/: tests.rs
crates/orcashell-terminal-view/src/input/: tests.rs
crates/orcashell-terminal-view/src/links/: tests.rs
crates/orcashell-terminal-view/src/mouse/: tests.rs
crates/orcashell-terminal-view/src/renderer/: tests.rs
crates/orcashell-terminal-view/src/search/: tests.rs
crates/orcashell-terminal-view/src/selection_delete/: tests.rs
crates/orcashell-ui/: Cargo.toml
crates/orcashell-ui/src/: app_view.rs  context_menu.rs  diff_explorer.rs  feed_detail_view.rs  lib.rs  live_diff_stream.rs  prompt_dialog.rs  repository_browser.rs  repository_browser_tests.rs  settings.rs  settings_view.rs  sidebar.rs  status_bar.rs  theme.rs  updater.rs  window_registry.rs  window_tab_bar.rs
crates/orcashell-ui/src/diff_explorer/: tests.rs
crates/orcashell-ui/src/pane/: mod.rs  resize.rs
crates/orcashell-ui/src/theme/: tests.rs
crates/orcashell-ui/src/updater/: tests.rs
crates/orcashell-ui/src/window_registry/: tests.rs
crates/orcashell-ui/src/workspace/: actions.rs  focus.rs  layout.rs  mod.rs  project.rs  tests.rs
crates/orcashell-ui/src/workspace/focus/: tests.rs
crates/orcashell-ui/src/workspace/layout/: tests.rs
crates/orcashell-ui/src/workspace/project/: tests.rs
crates/orcashell-ui/tests/: repository_graph.rs
crates/orcashell/src/: assets.rs  main.rs  tests.rs
docs/architecture/: Architecture.md  Tech-Stack.md
docs/design/: UI-Identity.md
forks/alacritty_terminal/: Cargo.toml
forks/alacritty_terminal/src/: event.rs
forks/alacritty_terminal/src/term/: mod.rs
forks/vte/src/: ansi.rs
packaging/linux/: nautilus-open-here.sh  orcashell-open-here.desktop  orcashell.desktop  uninstall.sh
packaging/macos/: Info.plist
packaging/macos/Services/New OrcaShell Tab Here.workflow/Contents/: Info.plist  document.wflow
packaging/macos/Services/New OrcaShell Window Here.workflow/Contents/: Info.plist  document.wflow
packaging/windows/: register-context-menu.ps1  unregister-context-menu.ps1
scripts/: generate-icon.py  package-linux.sh  package-macos.sh
scripts/dev/: setup-conflict-fixtures.sh
scripts/dev/conflict-fixtures/rust-app-template/: .gitignore  Cargo.toml  README.md
scripts/dev/conflict-fixtures/rust-app-template/config/: dev.json
scripts/dev/conflict-fixtures/rust-app-template/src/: lib.rs  main.rs  merge_engine.rs  session.rs
scripts/dev/conflict-fixtures/rust-app-template/tests/: merge_flow.rs
