[package]
name = "orcashell-daemon-core"
version = "0.3.2"
edition.workspace = true

[dependencies]
orcashell-ipc = { path = "../orcashell-ipc" }
orcashell-protocol = { path = "../orcashell-protocol" }
orcashell-git = { path = "../orcashell-git" }
orcashell-store = { path = "../orcashell-store" }
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
async-channel.workspace = true
parking_lot.workspace = true
notify = "6.1"
orcashell-platform = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
