[package]
name = "orcashell"
version = "0.3.0"
edition.workspace = true

[[bin]]
name = "orcashell"

[dependencies]
gpui.workspace = true
orcashell-ui = { path = "../orcashell-ui" }
orcashell-daemon-core = { path = "../orcashell-daemon-core" }
orcashell-ipc = { path = "../orcashell-ipc" }
orcashell-protocol = { path = "../orcashell-protocol" }
orcashell-terminal-view = { path = "../orcashell-terminal-view" }
anyhow.workspace = true
rust-embed = "8"
orcashell-store = { path = "../orcashell-store" }
parking_lot = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
